--- a/src/pages/portfolio.css
+++ b/src/pages/portfolio.css
@@ -1,71 +1,87 @@
-.container {
-  width: 60%;
-  margin: 2rem auto;
-}
-
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(8, 5vw);
-  grid-gap: 1.5rem;
-}
-
-.gallery__img {
+.header {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  /* z-index: 2; */
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
 }
 
-.gallery__img:hover {
-  transform: scale(1.05);
-  transition: all 0.5s;
+.letters {
+  flex: 1;
+  display: flex;
+  text-transform: uppercase;
 }
 
-.gallery__item--1 {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 3;
+.letters > div {
+  flex: 1;
+  font-size: 18vw;
+  font-weight: 400;
+  color: #000;
+  text-align: center;
 }
 
-.gallery__item--2 {
-  grid-column-start: 3;
-  grid-column-end: 5;
-  grid-row-start: 1;
-  grid-row-end: 3;
+.projects-holder {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  min-height: 100vh;
 }
 
-.gallery__item--3 {
-  grid-column-start: 5;
-  grid-column-end: 9;
-  grid-row-start: 1;
-  grid-row-end: 6;
+.project {
+  width: 60%;
+  display: flex;
+  border: solid #000;
+  height: 31vh;
+  margin-bottom: 2vh;
+  border-radius: 43px;
+  background: #ffffff;
+  box-shadow: 6px 6px 12px #e4e4e4, -6px -6px 12px #fcfcfc;
 }
 
-.gallery__item--4 {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 3;
-  grid-row-end: 6;
+.project:first-child {
+  margin-top: 2vh;
 }
 
-.gallery__item--5 {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 6;
-  grid-row-end: 9;
+.img {
+  width: 100%;
+  /* height: ; */
+  margin-right: 3vw;
+  padding: 1em;
 }
 
-.gallery__item--6 {
-  grid-column-start: 5;
-  grid-column-end: 9;
-  grid-row-start: 6;
-  grid-row-end: 9;
+.img-holder{
+  width: 40%;
 }
 
-@media (max-width: 768px) {
-  .gallery__img {
-    height: auto; /* Adjust the height to maintain proportions */
-  }
+
+.text-desc-holder{
+  width: 60%;
 }
+
+.text-holder {
+  height: 95%;
+  width: 100%;
+  padding: 1em;
+  font-size: bold;
+  padding-right: 2em;
+  padding-top: 2vh;
+}
+
+.desc-holder {
+  padding-top: 2vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* align-items: flex-end; */
+}
+
+.git-link a {
+  pointer-events: auto;
+  color:blue;
+  z-index: 999; 
+}
+
+
